fix: Background image would repeat or leave some space in some mobile or tablet devices
Set background-size to cover the whole html always and position the image on the bottom to have the cleaner bottom-center part of the image behind the content for better visibility.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,10 @@ html, body {
 	width: 100%;
 	color: #2d3c49;
 	font-family: sans-serif;
-	background: linear-gradient(0deg,hsla(0,14%,97%,.8),hsla(0,14%,97%,.8)),url('../img/back[small].jpg');
-	background-position: center;
+	background: linear-gradient(hsla(0,14%,97%,.8), hsla(0,14%,97%,.8)), url('../img/back[small].jpg');
+	background-position: bottom;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 header {
